figured out what I was doing wrong regarding my secondary list not showing up after quite a bit of time - turns out I never changed the second {{cat}} tag... truly, copy-paste is a dangerous tool; more practically, most of the work that I just completed involved creating the front-end HTML and CSS using Bootstrap and Handlebars - barring the issue with leftover cat terminology, this was fairly straightforward; worst part was dealing with Bootstrap styling without the extension that I installed - it didn't recognize the handlebar file, so I lost access to many of the shortcuts that I had been relying upon... so I just made the page in an index.html... which I haven't removed. Whoops. Will do that shortly. Otherwise, the backend was actually super straightforward, honestly - even the orm work fit neatly into place. I'm probably missing some things, and I haven't yet pushed this to Heroku, but otherwise, not bad

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,19 +1,27 @@
-li {
-  padding: 5px;
-  margin: 5px;
-  background: #faebd7;
+body {
+  background-color: lightyellow; 
 }
 
-.label {
+#burger-name {
+  font-size: 50px
+}
+
+ul {
+  list-style-type: none;
+}
+
+.fresh {
+  padding: 10px;
+  margin: 5px;
+  background: #faebd7;
+  font-size: 25px; 
   font-weight: bold;
 }
 
-.create-update-form {
-  padding: 5px;
-  margin: 5px;
-  background: aqua;
+.gone-reduced-to-atoms {
+  padding: 10px; 
+  margin: 5px; 
+  background: lightgrey; 
+  font-size: 25px; 
 }
 
-.form-group {
-  margin-bottom: 5px;
-}
